src/objects/MUSW__Sequence_Range__c.object
<CustomObject>
    <description>Range definitions for Sequence Numbers</description>
    <fields>
        <fullName>MUSW__End__c</fullName>
        <label>End</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Sequence_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sequence Number</label>
        <referenceTo>MUSW__Sequence_Number__c</referenceTo>
        <relationshipLabel>Sequence Ranges</relationshipLabel>
        <relationshipName>Sequence_Ranges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Start__c</fullName>
        <label>Start</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sequence Range</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sequence Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>